# rustytools

./: .Renviron  .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  debug.R  index.html  index.md  pkgdown.yml  rustytools.Rproj  search.json  sitemap.xml
R/: extendr-wrappers.R  magic.R  pcha.R  rustytools.R
articles/: getConsensus.html  index.html  introduction.html  magic.html  pcha.html  seqAlign.html
man/: align.Rd  dgC_from_components.Rd  dot-linerr.Rd  find_knee_pt.Rd  get_consensus.Rd  pcha.Rd  rustytools-package.Rd  seg_err.Rd  seurat_magic.Rd  t_ratio_test.Rd
man/figures/: logo.ai
news/: index.html
pkgdown/: rustytools.ai
reference/: align.html  dgC_from_components.html  dot-linerr.html  find_knee_pt.html  get_consensus.html  index.html  pcha.html  rustytools-package.html  rustytools.html  seg_err.html  seurat_magic.html
src/rust/: Cargo.toml
src/rust/src/: align.rs  getconsensus.rs  lib.rs  magic.rs  pcha.rs  pcha_notoptimized.rs
vignettes/: _getConsensus.Rmd  getConsensus.Rmd  introduction.Rmd  magic.Rmd  pcha.Rmd  seqAlign.Rmd
