[package]
name = 'rustytools'
publish = false
version = '0.0.2'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rustytools'

[dependencies]
extendr-api = '*'
bio-types = ">=0.12"
ndarray        = { version = "0.15.2", features = ["blas", "rayon"] }
ndarray-rand   = "0.15"
rand           = "0.8"
rayon = "1"
sprs = "*"
ndarray-linalg = { version = "0.17.0", features = ["openblas"] } 
nalgebra = { version = "0.32", features = ["std"] }
qhull = "0.4.0"
factorial = { version = "0.4.0" }