[package]
name = 'rustytools'
publish = false
version = '0.0.2'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rustytools'

[dependencies]
extendr-api = '*'
bio-types = ">=0.12"
# ndarray        = { version = "0.16", features = ["blas"] }
ndarray  = "0.16"
ndarray-linalg =  "0.17"
ndarray-rand   = "0.15"
rand           = "0.8"
rayon = "1"
sprs = "*"
qhull = "0.4.0"
ndarray-stats = "0.5"
# ndarray-linalg = { version = "0.17", features = ["openblas"] } 